--- a/environment.yml
+++ b/environment.yml
@@ -7,9 +7,9 @@ dependencies:
   - pip
   - pip:
       # PyTorch + torchvision với CUDA 11.1 runtime
-      - torch==1.9.0+cu111
-      - torchvision==0.10.0+cu111
-      - -f https://download.pytorch.org/whl/torch_stable.html
+      - torch==1.9.0
+      - torchvision==0.10.0
+    
 
       # Core dependencies
       - numpy>=1.20,<1.24
